--- a/public/products.html
+++ b/public/products.html
@@ -1,11 +1,37 @@
-
-<!doctype html><html><head><meta charset="utf-8"/><title>Productos</title></head><body>
+<!doctype html><html><head><meta charset="utf-8"/><title>Productos</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"></head>
+<body style="font-family:system-ui;max-width:800px;margin:24px auto">
 <h2>Productos</h2>
-<form id="f"><input name="name" placeholder="Nombre" required /><input name="price" type="number" step="0.01" placeholder="Precio" required /><input name="stock" type="number" placeholder="Stock" required /><button>Agregar</button></form>
+<form id="f">
+  <input name="name" placeholder="Nombre" required />
+  <input name="price" type="number" step="0.01" placeholder="Precio" required />
+  <input name="stock" type="number" placeholder="Stock" required />
+  <button>Agregar</button>
+</form>
 <ul id="list"></ul>
 <script>
-async function load(){ const res = await fetch('/api/products'); const data = await res.json(); const list = document.getElementById('list'); list.innerHTML=''; data.forEach(p=>{ const li = document.createElement('li'); li.textContent = p.name + ' - $' + p.price + ' (stock:'+p.stock+')'; list.appendChild(li); }); }
-document.getElementById('f').addEventListener('submit', async (e)=>{ e.preventDefault(); const f = e.target; await fetch('/api/products',{method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ name: f.name.value, price: parseFloat(f.price.value), stock: parseInt(f.stock.value) })}); f.reset(); load(); });
+async function load(){
+  const res = await fetch('/api/products'); const data = await res.json();
+  const list = document.getElementById('list'); list.innerHTML='';
+  data.forEach(p=>{
+    const li = document.createElement('li');
+    li.textContent = p.name + ' - $' + p.price + ' (stock:'+p.stock+')';
+    list.appendChild(li);
+  });
+}
+document.getElementById('f').addEventListener('submit', async (e)=>{
+  e.preventDefault();
+  const f = e.target;
+  await fetch('/api/products',{
+    method:'POST', headers:{'Content-Type':'application/json'},
+    body: JSON.stringify({
+      name: f.name.value,
+      price: parseFloat(f.price.value),
+      stock: parseInt(f.stock.value)
+    })
+  });
+  f.reset(); load();
+});
 load();
 </script>
 </body></html>
