--- a/public/reservations.html
+++ b/public/reservations.html
@@ -3,6 +3,7 @@
 <body style="font-family:system-ui;max-width:800px;margin:24px auto">
 <h2>Agenda / Reservas</h2>
 <form id="f">
+  <label>Bot ID: <input name="bot_id" value="default" /></label><br/>
   <input name="customer" placeholder="Cliente" required />
   <input name="starts_at" type="datetime-local" required />
   <input name="notes" placeholder="Notas" />
@@ -11,7 +12,8 @@
 <ul id="list"></ul>
 <script>
 async function load(){
-  const res = await fetch('/api/appointments'); const data = await res.json();
+  const bot_id = document.querySelector('input[name="bot_id"]').value || 'default';
+  const res = await fetch('/api/appointments?bot_id='+encodeURIComponent(bot_id)); const data = await res.json();
   const list = document.getElementById('list'); list.innerHTML='';
   data.forEach(a=>{
     const li = document.createElement('li');
@@ -23,17 +25,16 @@ document.getElementById('f').addEventListener('submit', async (e)=>{
   e.preventDefault();
   const f = e.target;
   const payload = {
+    bot_id: f.bot_id.value || 'default',
     customer: f.customer.value,
-    starts_at: f.starts_at.value.replace('T',' ') + ':00',
+    starts_at: f.starts_at.value, // server normaliza
     notes: f.notes.value
   };
   const r = await fetch('/api/appointments',{
     method:'POST', headers:{'Content-Type':'application/json'},
     body: JSON.stringify(payload)
   });
-  if(!r.ok){
-    alert('No se pudo agendar: ' + (await r.text()));
-  }
+  if(!r.ok){ alert('No se pudo agendar: ' + (await r.text())); }
   f.reset(); load();
 });
 load();
