--- a/public/rules.html
+++ b/public/rules.html
@@ -1,6 +1,5 @@
 <!doctype html><html><head><meta charset="utf-8"/><title>Reglas</title></head><body>
 <h2>Reglas de negocio</h2>
-
 <div style="margin-bottom:12px; padding:8px; border:1px solid #ddd">
   <label>Bot ID: <input id="bot_id" value="default"></label>
   <label style="margin-left:8px">Modo del bot:
@@ -12,7 +11,6 @@
   <button id="saveMode">Guardar modo</button>
   <span id="modeMsg" style="margin-left:6px;color:green"></span>
 </div>
-
 <label>Modo (filtro): 
   <select id="mode">
     <option value="">--Todas--</option>
@@ -23,10 +21,10 @@
 </label>
 <button id="load">Cargar</button> 
 <button id="restore">Restaurar reglas base</button>
-
 <h3>Agregar / Editar regla</h3>
 <form id="form">
   <input name="id" type="hidden" />
+  <label>Bot ID: <input name="bot_id" value="default"></label><br/>
   <label>Modo: 
     <select name="mode">
       <option value="common">common</option>
@@ -44,18 +42,16 @@
   <label>Prioridad: <input name="priority" type="number" value="50" /></label><br/>
   <button type="submit">Guardar</button>
 </form>
-
 <h3>Listado</h3>
 <ul id="list"></ul>
-
 <script>
-const FILTER_KEY = 'rules_filter_mode_v1';
-
+const FILTER_KEY = 'rules_filter_mode_v2';
 async function load(){
   const modeSel = document.getElementById('mode');
   const mode = modeSel.value;
   localStorage.setItem(FILTER_KEY, mode);
-  const url = '/api/rules' + (mode ? '?mode='+encodeURIComponent(mode) : '');
+  const bot_id = document.querySelector('input#bot_id').value || 'default';
+  const url = '/api/rules?bot_id='+encodeURIComponent(bot_id)+(mode ? '&mode='+encodeURIComponent(mode) : '');
   const res = await fetch(url); const data = await res.json();
   const list = document.getElementById('list'); list.innerHTML='';
   data.forEach(r=>{
@@ -68,14 +64,16 @@ async function load(){
 }
 document.getElementById('load').addEventListener('click', load);
 document.getElementById('restore').addEventListener('click', async ()=>{
+  const bot_id = document.querySelector('input#bot_id').value || 'default';
   if(!confirm('Restaurar reglas base (se eliminarán las actuales)?')) return;
-  await fetch('/api/rules/restore-defaults',{method:'POST'});
+  await fetch('/api/rules/restore-defaults',{method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ bot_id })});
   load();
 });
 document.getElementById('form').addEventListener('submit', async (e)=>{
   e.preventDefault();
   const f = e.target;
   const obj = { 
+    bot_id: f.bot_id.value || 'default',
     mode: f.mode.value, 
     condition: f.condition.value, 
     triggers: f.triggers.value.split('\n').map(s=>s.trim()).filter(Boolean), 
@@ -96,11 +94,13 @@ document.getElementById('list').addEventListener('click', async (e)=>{
     if(confirm('Eliminar regla?')){ await fetch('/api/rules/'+id,{method:'DELETE'}); load(); }
   } else if(e.target.classList.contains('edit')){
     const id = e.target.getAttribute('data-id');
-    const res = await fetch('/api/rules'); const rules = await res.json();
+    const bot_id = document.querySelector('input#bot_id').value || 'default';
+    const res = await fetch('/api/rules?bot_id='+encodeURIComponent(bot_id)); const rules = await res.json();
     const r = rules.find(x=>String(x.id)===String(id));
     if(r){
       const f = document.getElementById('form');
       f.id.value = r.id;
+      f.bot_id.value = r.bot_id || bot_id;
       f.mode.value = r.mode;
       const triggers = Array.isArray(r.triggers)?r.triggers:JSON.parse(r.triggers||'[]');
       f.condition.value = r.condition;
@@ -111,7 +111,6 @@ document.getElementById('list').addEventListener('click', async (e)=>{
     }
   }
 });
-
 async function loadBotMode(){
   const bot_id = document.getElementById('bot_id').value || 'default';
   const r = await fetch('/api/config?bot_id='+encodeURIComponent(bot_id));
@@ -130,7 +129,6 @@ document.getElementById('saveMode').addEventListener('click', async ()=>{
   document.getElementById('modeMsg').textContent = ok ? 'Guardado' : 'Error';
   setTimeout(()=> document.getElementById('modeMsg').textContent='', 1500);
 });
-
 (function init(){
   const saved = localStorage.getItem(FILTER_KEY);
   if(saved!==null){ document.getElementById('mode').value = saved; }
@@ -138,5 +136,4 @@ document.getElementById('saveMode').addEventListener('click', async ()=>{
   loadBotMode();
 })();
 </script>
-</body>
-</html>
+</body></html>
